--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "bootstrap": "lerna bootstrap",
     "doctoc": "doctoc --maxlevel 2 README.md .github/CONTRIBUTING.md",
     "test": "npm run lint",
     "lint": "eslint .",
@@ -32,6 +33,9 @@
   "eslintConfig": {
     "extends": [
       "algolia"
-    ]
+    ],
+    "rules": {
+      "import/no-commonjs": "off"
+    }
   }
 }
