--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run lint",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "update-docs": "npm run doctoc && git add README.md .github/CONTRIBUTING.md && git commit -am 'docs(READMES): update' && git push",
     "release": "lerna publish --exact --conventional-commits",
     "dev": "",
     "start": ""
